1. Publish the alpha of turms-plugin-minio; 2. Add storage service + storage properties in turms server 3. Polish plugin mechanism 4. Code optimization